# pyspark-applications

./: .gitignore  CLASSIC_README.md  CONNNECT_README.md  README.md  logging.conf  main.py  pyproject.toml
classic_application/: sparkapp.py
sparkconnect_application/: main_sparkconnect.py  sparkconnectapp.py
